# Multi-ROMix-Scrypt-Accelerator

./: LICENSE  README.md
Hardware/MRSA 1 PE/Kintex UltraScale/: power_report.txt  timing_report.txt  utilization_report.txt
Hardware/MRSA 16 PEs/ALVEO U280/: power_report.txt  timing_report.txt  utilization_report.txt
Hardware/MRSA 16 PEs/Virtex 7/: power_power_1.txt  power_power_1.xpe  timing_report.txt  utilization_report.txt
Hardware/MRSA 32 PEs/Kintex UltraScale/: power_power_1.txt  power_power_1.xpe  timing_report.txt  utilization_report.txt
Hardware/MRSA 32 PEs/Virtex 7/: power_power_1.xpe
Hardware/Test Data/Testcases/: PBK1ST_out.txt  PBK2ND_in.txt  ROMIX_in.txt  ROMIX_out.txt  ScryptOut.txt  ScryptOut_inv.txt  blockID.txt  test_bm_in.txt  test_bm_out.txt
Software/CPU/myscrypt/: CMakeLists.txt  PwrData_2021-3-30-11-37-38.csv  README.md  autobuild.sh
Software/CPU/myscrypt/all/: a.out  datatypes.h  run.sh  scrypt.cpp  scrypt.h  test_scrypt_multithreads.cpp  utils.cpp
Software/CPU/myscrypt/src/: scrypt.cpp  sha256.cpp
Software/CPU/myscrypt/test/: test_scrypt.cpp  test_scrypt_multithreads.cpp
Software/GPU/myscrypt/: CMakeLists.txt  PwrData_2021-3-30-12-6-27.csv  cal_time.sh  run.sh  scrypt_cpu_gpu_record.xlsx  test_salsa.py  utils
Software/GPU/myscrypt/all/: a.out  out  run.sh  run_GPU.sh  run_GPU_2.sh  sha256.h  test.txt  test_content.txt  test_gpu_info.sh  test_gpu_official.cu  test_gpu_official_2.cu  test_scrypt_gpu.cu  test_scrypt_multithreads.cpp  utils.h
Software/GPU/myscrypt/test/: test_scrypt_gpu.cu  test_scrypt_multithreads.cpp
